--- a/notebooks/Fig2_DoubleWell.ipynb
+++ b/notebooks/Fig2_DoubleWell.ipynb
@@ -366,7 +366,7 @@
     "double_well = DoubleWell(params=params)\n",
     "plt.figure(figsize=(5,5))\n",
     "double_well.plot_dimer_energy();\n",
-    "plt.savefig(paper_dir + 'figs/double_well/potential.pdf', bbox_inches='tight')"
+    "#plt.savefig(paper_dir + 'figs/double_well/potential.pdf', bbox_inches='tight')"
    ]
   },
   {
@@ -497,7 +497,7 @@
     "ax2.set_yticks([])\n",
     "ax2.set_ylim(-2.5, 2.5)\n",
     "ax2.set_xlabel('Probability')\n",
-    "plt.savefig(paper_dir + 'figs/double_well/prior_trajs.pdf', bbox_inches='tight')"
+    "#plt.savefig(paper_dir + 'figs/double_well/prior_trajs.pdf', bbox_inches='tight')"
    ]
   },
   {
