--- a/notebooks/Fig3_Particles.ipynb
+++ b/notebooks/Fig3_Particles.ipynb
@@ -187,7 +187,8 @@
    "metadata": {},
    "source": [
     "Particle model\n",
-    "---"
+    "---\n",
+    "Run notebook \"Particles_Simulation_Data\" to generate data"
    ]
   },
   {
@@ -376,7 +377,7 @@
    ],
    "source": [
     "## ... or load saved Umbrella Sampling data.\n",
-    "npzfile = np.load(paper_dir + 'figs/particles/US_data.npz')\n",
+    "npzfile = np.load('./particles/US_data.npz')\n",
     "colors = ['black', 'purple', 'blue', 'orange', 'red']\n",
     "x = npzfile['umbrella_positions']\n",
     "temperatures_US = npzfile['temperatures']\n",
